[package]
name = "war_report_parser"
version = "0.1.0"
authors = ["gwy15 <gwy15thu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.7"
env_logger = "0.7.1"
# find files
glob = "0.3.0"

# 
serde = "1.0.114"
serde_json = "1.0.56"
