[package]
name = "war_report_parser"
version = "0.3.1"
authors = ["gwy15 <gwy15thu@gmail.com>"]
edition = "2018"
build = "src/build.rs"

[package.metadata.winres]
OriginalFilename = "化吧打钱.exe"
LegalCopyright = "Copyright 大头 © 2020"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[lib]
name = "wrp"
crate-type = ["cdylib"]

[dependencies]
# logging
log = "0.4.7"
env_logger = "0.7.1"
# find files
glob = "0.3.0"
# read
serde = "1.0.114"
serde_json = "1.0.56"
# write
# simple_excel_writer = "0.1.7"
simple_excel_writer = { git = "https://github.com/gwy15/simple_excel_writer.git" }
